--- a/index.html
+++ b/index.html
@@ -23,20 +23,8 @@
     <div class="w3-row">
 
     <!-- Blog entries -->
-    <div class="w3-col l8 s12">
+    <div class="w3-col l8 s12" id="main">
       <!-- Blog entry -->
-      <div class="w3-card-4 w3-margin w3-white">
-        <div class="w3-container">
-          <h3><b>TITLE HEADING</b></h3>
-          <h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5>
-        </div>
-        <canvas id="c01"></canvas>
-        <div class="w3-container">
-          <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-            tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-        </div>
-      </div>
-      <hr>
     <!-- END BLOG ENTRIES -->
     </div>
 
@@ -63,12 +51,15 @@
     <!-- END w3-content -->
     </div>
 
+<div id="result">
+
+</div>
     <!-- Footer -->
     <footer class="w3-container w3-dark-grey w3-padding-32">
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/core.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="data/data.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
