--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
         <div class="w3-container w3-padding">
           <h4>Popular Posts</h4>
         </div>
-        <ul class="w3-ul w3-hoverable w3-white">
-          <li class="w3-padding-16">
-            <span class="w3-large">Lorem</span><br>
-          </li>
+        <ul class="w3-ul w3-hoverable w3-white" id="postlist">
         </ul>
       </div>
       <hr>
