--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
     <!-- Blog entries -->
     <div class="w3-col l8 s12" id="main">
       <!-- Blog entry -->
+      <div class="w3-card-4 w3-margin w3-white">
+        <div class="w3-container">
+          <h3><b id="head"></b></h3>
+        </div>
+        <div class="w3-padding">
+          <canvas id="chart"></canvas>
+        </div>
+      </div>
     <!-- END BLOG ENTRIES -->
     </div>
 
@@ -47,10 +55,6 @@
 
     <!-- END w3-content -->
     </div>
-
-<div id="result">
-
-</div>
     <!-- Footer -->
     <footer class="w3-container w3-dark-grey w3-padding-32">
     </footer>
